fixed item show page's user info links (were overflowing)

--- a/app/assets/stylesheets/api/items-show.scss
+++ b/app/assets/stylesheets/api/items-show.scss
@@ -67,6 +67,7 @@
 }
 
 .item-show-seller {
+  width: fit-content;
   font-size: 14px;
   font-family: 'gt-america-extended-regular';
   color: rgb(26, 26, 26);
